--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.7.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.5.0",
     "undici": "^7.22.0",
     "zod": "^4.3.6"
