--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.7.0",
     "remark-gfm": "^4.0.1",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.5.0",
     "undici": "^7.22.0",
     "zod": "^4.3.6"
