--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "resend": "^6.9.2",
     "tailwind-merge": "^3.5.0",
     "undici": "^7.22.0",
+    "yahoo-finance2": "^3.13.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
